modules/web/js/ballerina/parser/antlr-gen/BallerinaParser.js
// Generated from Ballerina.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BallerinaListener = require('./BallerinaListener').BallerinaListener;
var grammarFileName = "Ballerina.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'package'", "';'", "'import'", "'as'", "'service'", 
                     "'{'", "'}'", "'resource'", "'('", "')'", "'native'", 
                     "'function'", "'throws'", "'connector'", "'action'", 
                     "'struct'", "'typemapper'", "'const'", "'='", "'worker'", 
                     "','", "':'", "'[]'", "'~'", "'<'", "'>'", "'.'", "'@'", 
                     "'if'", "'else'", "'iterate'", "'while'", "'break'", 
                     "'fork'", "'join'", "'any'", "'all'", "'timeout'", 
                     "'try'", "'catch'", "'throw'", "'return'", "'reply'", 
                     "'->'", "'<-'", "'['", "']'", "'+'", "'-'", "'!'", 
                     "'^'", "'/'", "'*'", "'%'", "'<='", "'>='", "'=='", 
                     "'!='", "'&&'", "'||'", "'create'", null, null, null, 
                     null, null, "'null'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, "IntegerLiteral", 
                      "FloatingPointLiteral", "BooleanLiteral", "QuotedStringLiteral", 
                      "BacktickStringLiteral", "NullLiteral", "Identifier", 
                      "WS", "LINE_COMMENT" ];

var ruleNames =  [ "compilationUnit", "packageDeclaration", "importDeclaration", 
                   "serviceDefinition", "serviceBody", "serviceBodyDeclaration", 
                   "resourceDefinition", "functionDefinition", "nativeFunction", 
                   "ballerinaFunction", "functionBody", "connectorDefinition", 
                   "nativeConnector", "nativeConnectorBody", "connector", 
                   "connectorBody", "nativeAction", "action", "structDefinition", 
                   "structDefinitionBody", "typeMapperDefinition", "nativeTypeMapper", 
                   "typeMapper", "typeMapperBody", "constantDefinition", 
                   "workerDeclaration", "returnParameters", "namedParameterList", 
                   "namedParameter", "returnTypeList", "qualifiedTypeName", 
                   "unqualifiedTypeName", "simpleType", "simpleTypeArray", 
                   "simpleTypeIterate", "withFullSchemaType", "withFullSchemaTypeArray", 
                   "withFullSchemaTypeIterate", "withScheamURLType", "withSchemaURLTypeArray", 
                   "withSchemaURLTypeIterate", "withSchemaIdType", "withScheamIdTypeArray", 
                   "withScheamIdTypeIterate", "typeName", "parameterList", 
                   "parameter", "packageName", "literalValue", "annotation", 
                   "annotationName", "elementValuePairs", "elementValuePair", 
                   "elementValue", "elementValueArrayInitializer", "statement", 
                   "variableDefinitionStatement", "assignmentStatement", 
                   "variableReferenceList", "ifElseStatement", "ifClause", 
                   "elseIfClause", "elseClause", "iterateStatement", "whileStatement", 
                   "breakStatement", "forkJoinStatement", "joinClause", 
                   "joinConditions", "timeoutClause", "tryCatchStatement", 
                   "catchClause", "throwStatement", "returnStatement", "replyStatement", 
                   "workerInteractionStatement", "triggerWorker", "workerReply", 
                   "commentStatement", "actionInvocationStatement", "variableReference", 
                   "argumentList", "expressionList", "functionInvocationStatement", 
                   "functionName", "actionInvocation", "callableUnitName", 
                   "backtickString", "expression", "mapStructInitKeyValueList", 
                   "mapStructInitKeyValue" ];

class BallerinaParser extends antlr4.Parser {
    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ruleNames;
        this.literalNames = literalNames;
        this.symbolicNames = symbolicNames;
        return this;
    }

    get atn() {
		return atn;
	}

    compilationUnit() {

        var localctx = new CompilationUnitContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, BallerinaParser.RULE_compilationUnit);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 183;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__0) {
                this.state = 182;
                this.packageDeclaration();
            }

            this.state = 188;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__2) {
                this.state = 185;
                this.importDeclaration();
                this.state = 190;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 197; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 197;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 191;
                    this.serviceDefinition();
                    break;

                case 2:
                    this.state = 192;
                    this.functionDefinition();
                    break;

                case 3:
                    this.state = 193;
                    this.connectorDefinition();
                    break;

                case 4:
                    this.state = 194;
                    this.structDefinition();
                    break;

                case 5:
                    this.state = 195;
                    this.typeMapperDefinition();
                    break;

                case 6:
                    this.state = 196;
                    this.constantDefinition();
                    break;

                }
                this.state = 199; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BallerinaParser.T__4) | (1 << BallerinaParser.T__10) | (1 << BallerinaParser.T__11) | (1 << BallerinaParser.T__13) | (1 << BallerinaParser.T__15) | (1 << BallerinaParser.T__16) | (1 << BallerinaParser.T__17) | (1 << BallerinaParser.T__27))) !== 0));
            this.state = 201;
            this.match(BallerinaParser.EOF);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    packageDeclaration() {

        var localctx = new PackageDeclarationContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, BallerinaParser.RULE_packageDeclaration);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 203;
            this.match(BallerinaParser.T__0);
            this.state = 204;
            this.packageName();
            this.state = 205;
            this.match(BallerinaParser.T__1);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    importDeclaration() {

        var localctx = new ImportDeclarationContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, BallerinaParser.RULE_importDeclaration);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 207;
            this.match(BallerinaParser.T__2);
            this.state = 208;
            this.packageName();
            this.state = 211;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__3) {
                this.state = 209;
                this.match(BallerinaParser.T__3);
                this.state = 210;
                this.match(BallerinaParser.Identifier);
            }

            this.state = 213;
            this.match(BallerinaParser.T__1);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    serviceDefinition() {

        var localctx = new ServiceDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, BallerinaParser.RULE_serviceDefinition);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 218;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__27) {
                this.state = 215;
                this.annotation();
                this.state = 220;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 221;
            this.match(BallerinaParser.T__4);
            this.state = 222;
            this.match(BallerinaParser.Identifier);
            this.state = 223;
            this.serviceBody();
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    serviceBody() {

        var localctx = new ServiceBodyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, BallerinaParser.RULE_serviceBody);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 225;
            this.match(BallerinaParser.T__5);
            this.state = 226;
            this.serviceBodyDeclaration();
            this.state = 227;
            this.match(BallerinaParser.T__6);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    serviceBodyDeclaration() {

        var localctx = new ServiceBodyDeclarationContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, BallerinaParser.RULE_serviceBodyDeclaration);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 232;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.Identifier) {
                this.state = 229;
                this.variableDefinitionStatement();
                this.state = 234;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 238;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__7 || _la===BallerinaParser.T__27) {
                this.state = 235;
                this.resourceDefinition();
                this.state = 240;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    resourceDefinition() {

        var localctx = new ResourceDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, BallerinaParser.RULE_resourceDefinition);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 244;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__27) {
                this.state = 241;
                this.annotation();
                this.state = 246;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 247;
            this.match(BallerinaParser.T__7);
            this.state = 248;
            this.match(BallerinaParser.Identifier);
            this.state = 249;
            this.match(BallerinaParser.T__8);
            this.state = 250;
            this.parameterList();
            this.state = 251;
            this.match(BallerinaParser.T__9);
            this.state = 252;
            this.functionBody();
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    functionDefinition() {

        var localctx = new FunctionDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, BallerinaParser.RULE_functionDefinition);
        try {
            this.state = 256;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
            switch(la_) {
            case 1:
                this.enterOuterAlt(localctx, 1);
                this.state = 254;
                this.nativeFunction();
                break;

            case 2:
                this.enterOuterAlt(localctx, 2);
                this.state = 255;
                this.ballerinaFunction();
                break;

            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    nativeFunction() {

        var localctx = new NativeFunctionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, BallerinaParser.RULE_nativeFunction);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 261;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__27) {
                this.state = 258;
                this.annotation();
                this.state = 263;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 264;
            this.match(BallerinaParser.T__10);
            this.state = 265;
            this.match(BallerinaParser.T__11);
            this.state = 266;
            this.match(BallerinaParser.Identifier);
            this.state = 267;
            this.match(BallerinaParser.T__8);
            this.state = 269;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__27 || _la===BallerinaParser.Identifier) {
                this.state = 268;
                this.parameterList();
            }

            this.state = 271;
            this.match(BallerinaParser.T__9);
            this.state = 273;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__8) {
                this.state = 272;
                this.returnParameters();
            }

            this.state = 277;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__12) {
                this.state = 275;
                this.match(BallerinaParser.T__12);
                this.state = 276;
                this.match(BallerinaParser.Identifier);
            }

            this.state = 279;
            this.match(BallerinaParser.T__1);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    ballerinaFunction() {

        var localctx = new BallerinaFunctionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, BallerinaParser.RULE_ballerinaFunction);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 284;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__27) {
                this.state = 281;
                this.annotation();
                this.state = 286;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 287;
            this.match(BallerinaParser.T__11);
            this.state = 288;
            this.match(BallerinaParser.Identifier);
            this.state = 289;
            this.match(BallerinaParser.T__8);
            this.state = 291;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__27 || _la===BallerinaParser.Identifier) {
                this.state = 290;
                this.parameterList();
            }

            this.state = 293;
            this.match(BallerinaParser.T__9);
            this.state = 295;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__8) {
                this.state = 294;
                this.returnParameters();
            }

            this.state = 299;
            _la = this._input.LA(1);
            if(_la===BallerinaParser.T__12) {
                this.state = 297;
                this.match(BallerinaParser.T__12);
                this.state = 298;
                this.match(BallerinaParser.Identifier);
            }

            this.state = 301;
            this.functionBody();
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    functionBody() {

        var localctx = new FunctionBodyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, BallerinaParser.RULE_functionBody);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 303;
            this.match(BallerinaParser.T__5);
            this.state = 307;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BallerinaParser.T__19) {
                this.state = 304;
                this.workerDeclaration();
                this.state = 309;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 313;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (BallerinaParser.T__28 - 29)) | (1 << (BallerinaParser.T__30 - 29)) | (1 << (BallerinaParser.T__31 - 29)) | (1 << (BallerinaParser.T__32 - 29)) | (1 << (BallerinaParser.T__33 - 29)) | (1 << (BallerinaParser.T__38 - 29)) | (1 << (BallerinaParser.T__40 - 29)) | (1 << (BallerinaParser.T__41 - 29)) | (1 << (BallerinaParser.T__42 - 29)))) !== 0) || _la===BallerinaParser.Identifier || _la===BallerinaParser.LINE_COMMENT) {
                this.state = 310;
                this.statement();
                this.state = 315;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 316;
            this.match(BallerinaParser.T__6);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    connectorDefinition() {
